--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   /* position: fixed; */
 
   margin: auto;
-  opacity: 0.7;
+  /* opacity: 1.0; */
   position: absolute;
   border: 2px solid orangered;
   /* display: none; */
