--- a/index.css
+++ b/index.css
@@ -15,3 +15,17 @@
   z-index: 10000;
 }
 
+button {
+  color: blueviolet;
+}
+
+#complete-query, #delete-query, q, button,
+.button, a.button, a.button:visited, .btn, .hero-box.double-panel .panel.white .btn {
+  background-color: white;
+  color: black;
+  border-color: #07c;
+  box-shadow: inset 0 1px 0 #66bfff;
+  font-size: 13.3333px;
+  padding: .61538462em 1em;
+  margin: 0em;
+}
